--- a/demo/sample_notebook.ipynb
+++ b/demo/sample_notebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,17 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "This is a raw section, without formatting."
+    "This is a raw section, without formatting.\n",
+    "This is the second line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an equation:\n",
+    "\n",
+    "$$c = \\sqrt{a^2 + b^2}$$"
    ]
   }
  ],
