Add and test conversion logic for more output types

--- a/examples/nbtohtml/sample-notebook.ipynb
+++ b/examples/nbtohtml/sample-notebook.ipynb
@@ -34,13 +34,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Python output!\n"
+      "Hello\n",
+      "world\n"
      ]
     }
    ],
    "source": [
     "def my_function():\n",
-    "    print(\"This is Python output!\")\n",
+    "    print(\"Hello\")\n",
+    "    print(\"world\")\n",
     "\n",
     "my_function()"
    ]
@@ -150,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11a4234c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11bf8a490>"
       ]
      },
      "execution_count": 3,
